--- a/styles/index.css
+++ b/styles/index.css
@@ -15,11 +15,6 @@ h1 {
     text-align: center;
 }
 
-form {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
 label {
     font-weight: bold;
 }
@@ -46,13 +41,13 @@ table {
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
-    border: 1px solid #ddd;
+    border: 2px solid #000000;
 }
 
 th, td {
     padding: 10px;
     text-align: center;
-    border: 1px solid #ddd;
+    border: 1px solid #000000;
 }
 
 tr:first-child th {
